--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -282,7 +282,6 @@
         tab: "grade_tabs",
         button: "btnCalificaciones",
         invalidOptionWarnings: false,
-        height: height, // set height of table (in CSS or here), this enables the Virtual DOM and improves render speed dramatically (can be any valid css height value)
         layout: "fitColumns", //fit columns to width of table (optional)
         rowClick: function (e, row) {
             javaConnector.dataPointSelection(row.getPosition());
@@ -579,6 +578,14 @@
         })
 
     }
+    function genericExport(id) {
+        html2canvas(document.getElementById(id),{logging:false}).then(function (canvas) {
+            javaConnector.saveImage(canvas.toDataURL());
+        }).catch(function (error) {
+            javaConnector.showErrorWindow("Cannot download image:" + error.message);
+        })
+	
+    }
 
     // Modifica el valor de los inputs segun el idioma pasado
     function getI18n(item) {
@@ -593,13 +600,7 @@
         }
     }
 
-    function genericExport(id) {
-        html2canvas(document.getElementById(id)).then(function (canvas) {
-            javaConnector.saveImage(canvas.toDataURL());
-        }).catch(function (error) {
-            javaConnector.showErrorWindow("Cannot download image:" + error.message);
-        })
-    }
+    
 
 
     function colorRGB(color) {
