--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -187,7 +187,7 @@
                     javaConnector.dataPointSelection(config.w.config.series.length - 1 - config.seriesIndex);
                 }
             },
-
+			height: height,
             toolbar: {
                 show: false,
             },
